typescript/checker/tests/conformance/parser/ecmascript5/ErrorRecovery/parserErrantEqualsGreaterThanAfterFunction1.ts.stderr
error: Expected LBrace, got Some(Arrow)
 --> $DIR/tests/conformance/parser/ecmascript5/ErrorRecovery/parserErrantEqualsGreaterThanAfterFunction1.ts:1:14
  |
1 | function f() => 4;
  |              ^^

